[gd_scene load_steps=46 format=2]

[ext_resource path="res://game/unit/frost/frost.gd" type="Script" id=1]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/leg.tres" type="Texture" id=2]
[ext_resource path="res://atlas/game/battlefield_n.png" type="Texture" id=3]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/body.tres" type="Texture" id=4]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/nose.tres" type="Texture" id=5]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/shoulder.tres" type="Texture" id=6]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/upperarm.tres" type="Texture" id=7]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/arm.tres" type="Texture" id=8]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/bullet_shell.tres" type="Texture" id=9]
[ext_resource path="res://material/additive_blend.tres" type="Material" id=10]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/sphere.tres" type="Texture" id=11]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/cloud_1.tres" type="Texture" id=12]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/booster.tres" type="Texture" id=13]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/thrust_1.tres" type="Texture" id=14]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/thrust_2.tres" type="Texture" id=15]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/cover.tres" type="Texture" id=16]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/head.tres" type="Texture" id=17]
[ext_resource path="res://atlas/game/battlefield.sprites/unit/frost/gastank.tres" type="Texture" id=18]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/explosion_2.tres" type="Texture" id=19]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_8.tres" type="Texture" id=20]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_7.tres" type="Texture" id=21]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_6.tres" type="Texture" id=22]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_5.tres" type="Texture" id=23]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_4.tres" type="Texture" id=24]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_3.tres" type="Texture" id=25]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_2.tres" type="Texture" id=26]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/unit_explosion_1.tres" type="Texture" id=27]
[ext_resource path="res://atlas/game/battlefield.sprites/vfx/pixel.tres" type="Texture" id=28]
[ext_resource path="res://game/unit/frost/explosion.tres" type="Animation" id=29]
[ext_resource path="res://game/vfx/hit_effect.tscn" type="PackedScene" id=30]
[ext_resource path="res://game/unit/frost/attack.tres" type="Animation" id=31]
[ext_resource path="res://game/unit/frost/destroy.tres" type="Animation" id=32]
[ext_resource path="res://game/unit/frost/idle.tres" type="Animation" id=33]
[ext_resource path="res://game/unit/frost/show.tres" type="Animation" id=34]
[ext_resource path="res://game/unit/frost/skill.tres" type="Animation" id=35]
[ext_resource path="res://game/unit/frost/frost_atk.wav" type="AudioStream" id=36]
[ext_resource path="res://game/sfx/explosion_knight.wav" type="AudioStream" id=37]
[ext_resource path="res://game/unit/frost/frost_skill.wav" type="AudioStream" id=38]
[ext_resource path="res://game/hpbar/hpbar_knight.tscn" type="PackedScene" id=39]
[ext_resource path="res://game/unit/frost/bullet.tscn" type="PackedScene" id=40]
[ext_resource path="res://game/unit/frost/freeze.tscn" type="PackedScene" id=41]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.745126 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4648 ), -1.99728, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.335938, 0.548645, 1, 1, 0.392157, 0.956863, 1, 0.193373 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Frost" type="Node2D"]
script = ExtResource( 1 )

[node name="Rotatable" type="Node2D" parent="."]
use_parent_material = true

[node name="Body" type="Node2D" parent="Rotatable"]
editor/display_folded = true
use_parent_material = true

[node name="LegL" type="Sprite" parent="Rotatable/Body"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
rotation = 2.61799
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )
offset = Vector2( -30, 0 )
flip_h = true

[node name="LegR" type="Sprite" parent="Rotatable/Body"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
rotation = -2.61799
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )
offset = Vector2( 30, 0 )

[node name="Main" type="Sprite" parent="Rotatable/Body"]
editor/display_folded = true
light_mask = 3
use_parent_material = true
position = Vector2( 0, 2 )
texture = ExtResource( 4 )
normal_map = ExtResource( 3 )

[node name="Nose" type="Sprite" parent="Rotatable/Body/Main"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
position = Vector2( 0, 40 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )
normal_map = ExtResource( 3 )
offset = Vector2( 0, -60 )

[node name="ShoulderL" type="Sprite" parent="Rotatable/Body/Main"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
position = Vector2( -35, 0 )
rotation = 0.261799
texture = ExtResource( 6 )
normal_map = ExtResource( 3 )
offset = Vector2( -10, 0 )
flip_h = true

[node name="UpperarmL" type="Sprite" parent="Rotatable/Body/Main/ShoulderL"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
position = Vector2( -10, 0 )
rotation = 0.261799
texture = ExtResource( 7 )
normal_map = ExtResource( 3 )
offset = Vector2( -10, 0 )
flip_h = true

[node name="ArmL" type="Sprite" parent="Rotatable/Body/Main/ShoulderL/UpperarmL"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
position = Vector2( -22.5, 2.5 )
rotation = -0.523599
texture = ExtResource( 8 )
normal_map = ExtResource( 3 )
offset = Vector2( -8, -20 )
flip_h = true

[node name="CartridgeL" type="Position2D" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL"]
position = Vector2( -18, -24.5 )

[node name="Particle" type="Node2D" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL/CartridgeL"]
scale = Vector2( 0.4, 0.4 )

[node name="Ejection" type="CPUParticles2D" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL/CartridgeL/Particle"]
emitting = false
amount = 6
lifetime = 1.5
speed_scale = 3.0
texture = ExtResource( 9 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( -200, 30 )
angular_velocity = 60.0
angular_velocity_random = 1.0
radial_accel = 60.0
radial_accel_random = 1.0
angle = 20.0
angle_random = 1.0
scale_amount_curve = SubResource( 1 )
color = Color( 0.313726, 0.254902, 0.180392, 0.533333 )

[node name="Flashing" type="Sprite" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL/CartridgeL"]
visible = false
modulate = Color( 1, 0.584314, 0.254902, 1 )
material = ExtResource( 10 )
position = Vector2( 2, 1 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="ShotpointL" type="Position2D" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL"]
position = Vector2( -3, -70 )

[node name="MuzzleFlash" type="CPUParticles2D" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL/ShotpointL"]
visible = false
material = ExtResource( 10 )
rotation = -2.98023e-08
speed_scale = 3.0
texture = ExtResource( 12 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, -50 )
angular_velocity = 180.0
angular_velocity_random = 1.0
radial_accel = 20.0
radial_accel_random = 1.0
scale_amount = 1.2
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL/ShotpointL/MuzzleFlash"]
material = ExtResource( 10 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 11 )

[node name="Light" type="Sprite" parent="Rotatable/Body/Main/ShoulderL/UpperarmL/ArmL/ShotpointL/MuzzleFlash"]
modulate = Color( 0.0941176, 0.533333, 1, 1 )
material = ExtResource( 10 )
position = Vector2( 0, 20 )
texture = ExtResource( 11 )

[node name="ShoulderR" type="Sprite" parent="Rotatable/Body/Main"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
position = Vector2( 35, 0 )
rotation = -0.261799
texture = ExtResource( 6 )
normal_map = ExtResource( 3 )
offset = Vector2( 10, 0 )

[node name="UpperarmR" type="Sprite" parent="Rotatable/Body/Main/ShoulderR"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
position = Vector2( 10, 0 )
rotation = -0.261799
texture = ExtResource( 7 )
normal_map = ExtResource( 3 )
offset = Vector2( 10, 0 )

[node name="ArmR" type="Sprite" parent="Rotatable/Body/Main/ShoulderR/UpperarmR"]
show_behind_parent = true
light_mask = 3
use_parent_material = true
position = Vector2( 22.5, 2.5 )
rotation = 0.523599
texture = ExtResource( 8 )
normal_map = ExtResource( 3 )
offset = Vector2( 8, -20 )

[node name="CartrigdeR" type="Position2D" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR"]
position = Vector2( 18, -24.5 )

[node name="Particle" type="Node2D" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR/CartrigdeR"]
rotation = -2.02656e-06
scale = Vector2( 0.4, 0.4 )

[node name="Ejection" type="CPUParticles2D" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR/CartrigdeR/Particle"]
emitting = false
amount = 6
lifetime = 1.5
speed_scale = 3.0
texture = ExtResource( 9 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 200, 30 )
angular_velocity = 60.0
angular_velocity_random = 1.0
radial_accel = 60.0
radial_accel_random = 1.0
angle = 20.0
angle_random = 1.0
scale_amount_curve = SubResource( 1 )
color = Color( 0.313726, 0.254902, 0.180392, 0.533333 )

[node name="Flashing" type="Sprite" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR/CartrigdeR"]
visible = false
modulate = Color( 1, 0.584314, 0.254902, 1 )
material = ExtResource( 10 )
position = Vector2( -2, 1 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="ShotpointR" type="Position2D" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR"]
position = Vector2( 3, -70 )

[node name="MuzzleFlash2" type="CPUParticles2D" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR/ShotpointR"]
visible = false
material = ExtResource( 10 )
rotation = -2.98023e-08
speed_scale = 3.0
texture = ExtResource( 12 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, -50 )
angular_velocity = 180.0
angular_velocity_random = 1.0
radial_accel = 20.0
radial_accel_random = 1.0
scale_amount = 1.2
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR/ShotpointR/MuzzleFlash2"]
material = ExtResource( 10 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 11 )

[node name="Light" type="Sprite" parent="Rotatable/Body/Main/ShoulderR/UpperarmR/ArmR/ShotpointR/MuzzleFlash2"]
modulate = Color( 0.0941176, 0.533333, 1, 1 )
material = ExtResource( 10 )
position = Vector2( 0, 20 )
texture = ExtResource( 11 )

[node name="BoosterL" type="Sprite" parent="Rotatable/Body/Main"]
show_behind_parent = true
use_parent_material = true
position = Vector2( -23.5, 0 )
texture = ExtResource( 13 )
normal_map = ExtResource( 3 )
offset = Vector2( 0, 20 )
flip_h = true

[node name="BoosterpointL" type="Position2D" parent="Rotatable/Body/Main/BoosterL"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -2, 35 )

[node name="Thrust" type="AnimatedSprite" parent="Rotatable/Body/Main/BoosterL/BoosterpointL"]
visible = false
modulate = Color( 0.262745, 0.862745, 1, 1 )
material = ExtResource( 10 )
scale = Vector2( 0.8, 1 )
frames = SubResource( 4 )
frame = 1
speed_scale = 2.0
offset = Vector2( 0, 30 )

[node name="Sprite" type="Sprite" parent="Rotatable/Body/Main/BoosterL/BoosterpointL"]
material = ExtResource( 10 )
position = Vector2( 0, 9 )
scale = Vector2( 0.3, 0.7 )
texture = ExtResource( 11 )

[node name="BoosterR" type="Sprite" parent="Rotatable/Body/Main"]
show_behind_parent = true
use_parent_material = true
position = Vector2( 23.5, 0 )
texture = ExtResource( 13 )
normal_map = ExtResource( 3 )
offset = Vector2( 0, 20 )

[node name="BoosterpointR" type="Position2D" parent="Rotatable/Body/Main/BoosterR"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2, 35 )

[node name="Thrust2" type="AnimatedSprite" parent="Rotatable/Body/Main/BoosterR/BoosterpointR"]
visible = false
modulate = Color( 0.262745, 0.862745, 1, 1 )
material = ExtResource( 10 )
scale = Vector2( 0.8, 1 )
frames = SubResource( 4 )
speed_scale = 2.0
offset = Vector2( 0, 30 )

[node name="Sprite2" type="Sprite" parent="Rotatable/Body/Main/BoosterR/BoosterpointR"]
material = ExtResource( 10 )
position = Vector2( 0, 9 )
scale = Vector2( 0.3, 0.7 )
texture = ExtResource( 11 )

[node name="Cover" type="Sprite" parent="Rotatable/Body/Main"]
light_mask = 3
use_parent_material = true
texture = ExtResource( 16 )
normal_map = ExtResource( 3 )
offset = Vector2( 0, -15 )

[node name="Head" type="Sprite" parent="Rotatable/Body/Main"]
light_mask = 3
use_parent_material = true
texture = ExtResource( 17 )
normal_map = ExtResource( 3 )

[node name="Gastank" type="Node2D" parent="Rotatable/Body/Main"]
use_parent_material = true

[node name="GastankL" type="Sprite" parent="Rotatable/Body/Main/Gastank"]
light_mask = 3
use_parent_material = true
position = Vector2( -27.5, 9 )
rotation = 0.523599
texture = ExtResource( 18 )
normal_map = ExtResource( 3 )
offset = Vector2( 0, 30 )
flip_h = true

[node name="GastankR" type="Sprite" parent="Rotatable/Body/Main/Gastank"]
light_mask = 3
use_parent_material = true
position = Vector2( 27.5, 9 )
rotation = -0.523599
texture = ExtResource( 18 )
normal_map = ExtResource( 3 )
offset = Vector2( 0, 30 )

[node name="Explosion" type="Node2D" parent="Rotatable"]
editor/display_folded = true
scale = Vector2( 2, 2 )

[node name="Main" type="Node2D" parent="Rotatable/Explosion"]
editor/display_folded = true

[node name="ExRing1" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 1, 0.233246, 0.214844, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 19 )

[node name="Ex8" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0, 0, 0, 1 )
rotation = -1.5708
texture = ExtResource( 20 )

[node name="Ex7" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.154541, 0.166643, 0.1875, 1 )
texture = ExtResource( 21 )

[node name="Ex6" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0, 0.742188, 1, 0.160235 )
material = ExtResource( 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 22 )

[node name="Ex5" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.241577, 0.109375, 1, 1 )
texture = ExtResource( 23 )

[node name="Ex4" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.265625, 0.380371, 1, 1 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 24 )

[node name="Ex3" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.40625, 0.666016, 1, 1 )
texture = ExtResource( 25 )

[node name="Ex2" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.0351563, 0.819092, 1, 1 )
rotation = 3.14159
texture = ExtResource( 26 )

[node name="Ex1" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
rotation = 1.5708
texture = ExtResource( 27 )

[node name="Ex1a" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
texture = ExtResource( 27 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Rotatable/Explosion/Main"]
emitting = false
amount = 12
lifetime = 1.3
preprocess = 1.0
speed_scale = 1.2
explosiveness = 0.5
texture = ExtResource( 28 )
spread = 180.0
gravity = Vector2( 0, 0 )
angular_velocity = 180.0
radial_accel = 90.0
scale_amount = 2.0
color = Color( 0.647059, 0.784314, 1, 1 )

[node name="Center" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.159531, 0.182441, 0.332031, 1 )
material = ExtResource( 10 )
scale = Vector2( 5, 5 )
texture = ExtResource( 11 )

[node name="Center2" type="Sprite" parent="Rotatable/Explosion/Main/Center"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="ExplosionAni" type="AnimationPlayer" parent="Rotatable/Explosion"]
anims/explosion = ExtResource( 29 )

[node name="HitEffect" parent="." instance=ExtResource( 30 )]
circle_radius = 50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 31 )
anims/destroy = ExtResource( 32 )
anims/idle = ExtResource( 33 )
anims/show = ExtResource( 34 )
anims/skill = ExtResource( 35 )

[node name="Sound" type="Node2D" parent="."]
editor/display_folded = true

[node name="Attack" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 36 )

[node name="Destroy" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 37 )

[node name="Skill" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 38 )

[node name="Hp" parent="." instance=ExtResource( 39 )]
position = Vector2( 0, -100 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "bullet", "freeze" ), [ ExtResource( 40 ), ExtResource( 41 ) ] ]
